--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -1,5 +1,26 @@
 {include="header"}
 
+   <div class="container-fluid" style="margin-top: 10px; margin-bottom: 10px;">
+      <div class="row">
+         <div class="col-md-8 col-sm-7 col-xs-8">
+            <div class="btn-group">
+               <a class="btn btn-sm btn-default" href="{$fsc->url()}" title="Recargar la página">
+                  <span class="glyphicon glyphicon-refresh"></span>
+               </a>
+               {if condition="$fsc->page->is_default()"}
+               <a class="btn btn-sm btn-default active" href="{$fsc->url()}&amp;default_page=FALSE" title="Desmarcar como página de inicio">
+                  <span class="glyphicon glyphicon-home"></span>
+               </a>
+               {else}
+               <a class="btn btn-sm btn-default" href="{$fsc->url()}&amp;default_page=TRUE" title="Marcar como página de inicio">
+                  <span class="glyphicon glyphicon-home"></span>
+               </a>
+               {/if}
+            </div>
+         </div>
+      </div>
+   </div>
+
    <div class="container-fluid">
       <section class="content">
          
