Corregido link a presupuestos

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -37,7 +37,7 @@
                   <div class="text-center">
                      </br>
                      <span class="glyphicon glyphicon-list-alt"></span>
-                     <a href="index.php?page=ventas_pedidos&pendientes=TRUE">
+                     <a href="index.php?page=ventas_presupuestos&pendientes=TRUE">
                         Más detalles <i class="glyphicon glyphicon-chevron-right"></i>
                      </a>
                   </div>
