--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -1,9 +1,9 @@
 {include="header"}
 
-   <div class="container-fluid" style="margin-top: 10px; margin-bottom: 10px;">
+   <div class="container-fluid" style="margin-top: 10px;">
       <div class="row">
-         <div class="col-md-8 col-sm-7 col-xs-8">
-            <div class="btn-group">
+         <div class="col-sm-6">
+            <div class="btn-group hidden-xs">
                <a class="btn btn-sm btn-default" href="{$fsc->url()}" title="Recargar la página">
                   <span class="glyphicon glyphicon-refresh"></span>
                </a>
@@ -18,9 +18,12 @@
                {/if}
             </div>
          </div>
+         <div class="col-sm-6 text-right">
+            <h2 style="margin-top: 0px;">Dashboard</h2>
+         </div>
       </div>
    </div>
-
+   
    <div class="container-fluid">
       <section class="content">
          
@@ -32,14 +35,23 @@
                <div class="bs-callout bs-callout-info">
                   <div class="inner">
                      <h4><strong><span class="text-capitalize">{#FS_PRESUPUESTOS#}</span> de clientes</strong></h4>
-                     <p>{loop="$fsc->num_presupuestos_pendientes()"}{$value["total"]}{/loop} pendientes / {loop="$fsc->num_presupuestos()"}{$value["total"]}{/loop} aprobados</p>
                   </div>
                   <div class="text-center">
-                     </br>
-                     <span class="glyphicon glyphicon-list-alt"></span>
-                     <a href="index.php?page=ventas_presupuestos&pendientes=TRUE">
-                        Más detalles <i class="glyphicon glyphicon-chevron-right"></i>
-                     </a>
+                     <br/>
+                     <ul class="list-group">
+                        <li class="list-group-item list-group-item-info clickableRow" href="index.php?page=ventas_presupuestos">
+                           <i class="glyphicon glyphicon-list"></i> Realizados <span class="badge">{loop="$fsc->num_presupuestos()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-warning clickableRow" href="index.php?page=ventas_presupuestos&pendientes=TRUE">
+                           <i class="glyphicon glyphicon-time"></i> Pendientes <span class="badge">{loop="$fsc->num_presupuestos_pendientes()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-danger clickableRow" href="index.php?page=ventas_presupuestos&rechazados=TRUE">
+                           <i class="glyphicon glyphicon-remove"></i> Rechazados <span class="badge">{loop="$fsc->num_presupuestos_rechazados()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-success">
+                           <i class="glyphicon glyphicon-ok"></i> Aprobados <span class="badge">{loop="$fsc->num_presupuestos_aprobados()"}{$value["total"]}{/loop}</span>
+                        </li>
+                     </ul>
                   </div>
                </div>
             </div>
@@ -58,14 +70,23 @@
                <div class="bs-callout bs-callout-success">
                   <div class="inner">
                      <h4><strong><span class="text-capitalize">{#FS_PEDIDOS#}</span> de clientes</strong></h4>
-                     <p>{loop="$fsc->num_pedidos_pendientes()"}{$value["total"]}{/loop} pendientes / {loop="$fsc->num_pedidos()"}{$value["total"]}{/loop} aprobados</p>
                   </div>
                   <div class="text-center">
                      </br>
-                     <span class="glyphicon glyphicon-list-alt"></span>
-                     <a href="index.php?page=ventas_pedidos&pendientes=TRUE">
-                        Más detalles <i class="glyphicon glyphicon-chevron-right"></i>
-                     </a>
+                     <ul class="list-group">
+                        <li class="list-group-item list-group-item-info clickableRow" href="index.php?page=ventas_pedidos">
+                           <i class="glyphicon glyphicon-list"></i> Realizados <span class="badge">{loop="$fsc->num_pedidos()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-warning clickableRow" href="index.php?page=ventas_pedidos&pendientes=TRUE">
+                           <i class="glyphicon glyphicon-time"></i> Pendientes <span class="badge">{loop="$fsc->num_pedidos_pendientes()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-danger clickableRow" href="index.php?page=ventas_pedidos&rechazados=TRUE">
+                           <i class="glyphicon glyphicon-remove"></i> Rechazados <span class="badge">{loop="$fsc->num_pedidos_rechazados()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-success">
+                           <i class="glyphicon glyphicon-ok"></i> Aprobados <span class="badge">{loop="$fsc->num_pedidos_aprobados()"}{$value["total"]}{/loop}</span>
+                        </li>
+                     </ul>
                   </div>
                </div>
             </div>
@@ -83,14 +104,20 @@
                <div class="bs-callout bs-callout-warning">
                   <div class="inner">
                      <h4><strong><span class="text-capitalize">{#FS_ALBARANES#}</span> de clientes</strong></h4>
-                     <p>{loop="$fsc->num_albaranes_pendientes()"}{$value["total"]}{/loop} pendientes / {loop="$fsc->num_albaranes()"}{$value["total"]}{/loop} aprobados</p>
                   </div>
                   <div class="text-center">
                      </br>
-                     <span class="glyphicon glyphicon-list-alt"></span>
-                     <a href="index.php?page=ventas_albaranes&pendientes=TRUE">
-                        Más detalles <i class="glyphicon glyphicon-chevron-right"></i>
-                     </a>
+                     <ul class="list-group">
+                        <li class="list-group-item list-group-item-info clickableRow" href="index.php?page=ventas_albaranes">
+                           <i class="glyphicon glyphicon-list"></i> Realizados <span class="badge">{loop="$fsc->num_albaranes()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-warning clickableRow" href="index.php?page=ventas_albaranes&ptefactura=TRUE">
+                           <i class="glyphicon glyphicon-time"></i> Pendientes <span class="badge">{loop="$fsc->num_albaranes_pendientes()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-success">
+                           <i class="glyphicon glyphicon-ok"></i> Aprobados <span class="badge">{loop="$fsc->num_albaranes_aprobados()"}{$value["total"]}{/loop}</span>
+                        </li>
+                     </ul>
                   </div>
                </div>
             </div>
@@ -99,14 +126,20 @@
                <div class="bs-callout bs-callout-danger">
                   <div class="inner">
                      <h4><strong><span class="text-capitalize">Facturas</span> de clientes</strong></h4>
-                     <p>{loop="$fsc->num_facturas_pendientes()"}{$value["total"]}{/loop} pendientes / {loop="$fsc->num_facturas()"}{$value["total"]}{/loop} aprobados</p>
                   </div>
                   <div class="text-center">
                      </br>
-                     <span class="glyphicon glyphicon-list-alt"></span>
-                     <a href="index.php?page=ventas_facturas&sinpagar=TRUE">
-                        Más detalles <i class="glyphicon glyphicon-chevron-right"></i>
-                     </a>
+                     <ul class="list-group">
+                        <li class="list-group-item list-group-item-info clickableRow" href="index.php?page=ventas_facturas">
+                           <i class="glyphicon glyphicon-list"></i> Realizados <span class="badge">{loop="$fsc->num_facturas()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-danger clickableRow" href="index.php?page=ventas_facturas&sinpagar=TRUE">
+                           <i class="glyphicon glyphicon-exclamation-sign"></i> Sin cobrar <span class="badge">{loop="$fsc->num_facturas_sin_cobrar()"}{$value["total"]}{/loop}</span>
+                        </li>
+                        <li class="list-group-item list-group-item-success">
+                           <i class="glyphicon glyphicon-briefcase"></i> Cobradas <span class="badge">{loop="$fsc->num_facturas_cobradas()"}{$value["total"]}{/loop}</span>
+                        </li>
+                     </ul>
                   </div>
                </div>
             </div>
