Corregidos enlaces intercambiados

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -286,7 +286,7 @@
                <div class="text-center">
                   <br/>
                   <ul class="list-group">
-                     <li class="list-group-item list-group-item-success clickableRow" href="index.php?page=compras_facturas">
+                     <li class="list-group-item list-group-item-success clickableRow" href="index.php?page=ventas_facturas">
                         <i class="glyphicon glyphicon-list"></i>
                         Total facturas de ventas
                         <span class="badge">
@@ -295,7 +295,7 @@
                            {/loop}
                         </span>
                      </li>
-                     <li class="list-group-item list-group-item-danger clickableRow" href="index.php?page=ventas_facturas">
+                     <li class="list-group-item list-group-item-danger clickableRow" href="index.php?page=compras_facturas">
                         <i class="glyphicon glyphicon-list"></i>
                         Total facturas de compras
                         <span class="badge">
